CorsConfig refactored